--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -12,7 +12,7 @@
 % To use when using pdflatex
 \usepackage{graphicx}
 \usepackage{url}     
-\usepackage{hyperref}   
+\usepackage{hyperref}  
       
 \newenvironment{packed_item}{
 \begin{itemize}
@@ -70,9 +70,9 @@
 
 \permission
 
-\begin{abstract}
-The improvements in computer and audio equipment in recent years makes it possible to experiment more freely with resource-demanding sound synthesis techniques such as spatialization. For seeking new means of expression different spatialization applications should be easily combined and accessible for both programmatic and user interfaces. % and/or other controllers. %e.g. a generative mapping of a granular synth output to different spatial renderer from one common user interface, while also streaming spatial encoded audio to the internet. 
-Guaranteeing efficient workflow for non-standardized approaches requires structure, flexibility, and interoperability. Common spatialization systems are too often self-contained giving no consideration to these requirements. Therefore, we propose a multi-layer approach to mediate sound spatialization to meet these demands.\\                              	
+\begin{abstract}  
+We propose a multi-layer approach to mediate across essential components involved in sound spatialization. This approach will facilitate the artistic work with spatialization systems which currently lacks in terms of structure, flexibility, and interoperability. 
+\\                            	
 \textbf{Keywords:} sound spatialization, interoperability, layered architecture, adaptation, site-specific, Ambisonics , TODO: make better \& stronger keywords   
 %-flexible working environment for spatialization\\
 %-A layered approach towards interoperability in sound spatialization management\\
@@ -82,16 +82,19 @@ Guaranteeing efficient workflow for non-standardized approaches requires structu
 %KEYWORDS : 
 \end{abstract}
 
-\section{Introduction}\label{sec:introduction}       
-The goal of any spatialization
+\section{Introduction}\label{sec:introduction}         
+The improvements in computer and audio equipment in recent years makes it possible to experiment more freely with resource-demanding sound synthesis techniques such as spatialization. For seeking new means of expression different spatialization applications should be easily combined and accessible for both programmatic and user interfaces. % and/or other controllers. %e.g. a generative mapping of a granular synth output to different spatial renderer from one common user interface, while also streaming spatial encoded audio to the internet. 
+Furthermore, 
+%The goal of any spatialization
 %rendering is it only the rendering system, or control/rendering ?
-system is to facilitate or empower the creative use of the spatial medium for a sonic artist. Quantitative studies on spatial music (\cite{otondo2008ctu}, \cite{PetersSurvey}) remind us that there are great individual and context-related differences in defining that goal amongst artists. %that the compositional use of spatialization techniques varies strongly across composers and musical context.    
-The requirements of a computer aided spatialization system may vary between a fixed-media composition (e.g \cite{BarrettOS02}%TODO: find a Robert Normandeau reference
+%system is to facilitate or empower the creative use of the spatial medium for a sonic artist. 
+Quantitative studies on spatial music (\cite{otondo2008ctu}, \cite{PetersSurvey}) remind us that there are great individual and context-related differences in the compositional use of spatialization and that there is not any spatialization system that could satisfy every artists. %that the compositional use of spatialization techniques varies strongly across composers and musical context.    
+For instance, the requirements of a computer aided spatialization system may vary between a fixed-media composition (e.g \cite{BarrettOS02}%TODO: find a Robert Normandeau reference
 ), an art-installation (\cite{lossius:2007sound_space_body}), and a live diffusion performance (\cite{Truax99}). 
 One example is an interactive art installation where the real-time quality of a spatial rendering system is of great importance in combination with the possibility to control spatial processes through a multi-touch screen.  Juxtaposed is a second example: a performance of a fixed-media composition where the paramount features may be multichannel playback and the compensation of non-equidistant loudspeakers (in terms of sound pressure and time delays). Additional scenarios may require binaural rendering for headphone listening, multichannel recording, up and down mixing, or a visual representation of a sound scene.  
 Moreover, even during the creation of one spatial art work, the importance of these requirements may change throughout different stages of the creative processes. % \emph{Experimentation -- Arranging -- Performance -- Documentation}. 
 %Several common paradigms for spatial sound synthesis are outlined in section \ref{sec:review}. %The availability of better CPU resources in recent years makes it possible to experiment more freely with these paradigms for seeking new ways of expressions, e.g. a generative mapping of a granular synth output to different spatial renderer from one common user interface, while also streaming spatial encoded audio to the internet. This paper shows how such complex spatialization scenarios can be conceptualized through a multi-layer structure.    
-
+Therefore, guaranteeing efficient workflow for sound spatialization requires structure, flexibility, and interoperability across all involved components. As outlined in section \ref{sec:review}   common spatialization systems are too often self-contained giving no consideration to these requirements. Therefore, we propose a multi-layer approach to mediate sound spatialization to meet these demands. 
 
 
 %\begin{packed_item} 
@@ -159,9 +162,9 @@ Moreover, even during the creation of one spatial art work, the importance of th
 \subsection{Digital Audio Workstations - DAW} \label{sec:digital audio workstations - DAW} 
 Currently, many composers and sound-artists use DAWs for designing their sound spatialization primarily in the context of fixed media, tape-music, and consumer media production. Users of DAWs often have former experience with live diffusion systems, or with panning in a hardware mixing console. Their migration to DAWs seems reasonable because the linear time representation of sound material and the audio bus architecture in DAWs originates from the use of multitrack tape recorder and mixing consoles. 
 A number of (mainly commercial) DAWs are mature and offer a systematic user interface, good project and sound file management, and extendability through plug-ins.  They can fulfill the needs of many users in the described context.\\
-However, through focusing on consumer media products, multichannel capabilities are limited. ITU 5.1, a surround sound format with equidistant loudspeakers around an ideal located listener and originally designed for the requirements of the film industry, is the most common multichannel format in DAWs and in surround panning plugins. 
-Moreover, the 5.1 setup favors frontal direction and has limited capabilities for localizing virtual sources from the sides and back, which may limit its artistic use.  More recently, extensions to 7.1 or 10.2 are available\footnote{A comparison of DAWs concerning their multichannel audio capabilities shows \url{http://acousmodules.free.fr/hosts.htm}.}.   
-Non-commercial loudspeaker setups are used in art installations or concert hall environments varying in number and layout.  These configurations are not typically anticipated by existing DAW software. Consequently, existing DAW-projects are difficult to adapt to these situations. 
+However, through focusing on consumer media products, multichannel capabilities are limited. ITU 5.1, a surround sound format with equidistant loudspeakers around an ideal located listener is the most common multichannel format. % in DAWs and in surround panning plugins. 
+Its artistic use may be limited because 5.1 favors the frontal direction and has reduced capabilities for localizing virtual sources from the sides and back.  More recently, extensions to 7.1 or 10.2 are available\footnote{A comparison of DAWs concerning their multichannel audio capabilities shows \url{http://acousmodules.free.fr/hosts.htm}.}.   
+Also, in art installations or concert hall environments non-commercial loudspeaker setups are common, varying in number and arrangements of loudspeakers.  These configurations are typically unaccounted by existing DAWs and therefore often difficult to use. 
 %From 1993, emergence of the ITU 5.1 has been announced as a major improvement for mixing surround sound. Originally designed to fulfill the needs of the film industry, this loudspeaker configuration appeared to music and entertainment companies as a new way to extend their commercial offer. Since then, all DAWs surround panners have been designed to respect and organize sound processing for this set-up. It was not until the late nineties that new suggestions for surround workstations (from 6.1 to 10.2, enhancing sides precision, and perception outside of the Central Listening Position) were considered.\\
 %This was an useful approach for recording, multimedia or film prospects (cannot do business without standards), but still in a regular, circular, geometric and (FIXME: non-neutral ?we mean it influences the user) design, which cannot be acceptable and sufficient for creation or live applications. As an example, a non-flexible loudspeaker circle set-up is very rarely adapted to the concert hall.\\ 
 \\Another critical function for surround sound mixing is the means by which a sound source's energy is distributed amongst the loudspeakers. A \emph{blur} parameter, which determines the apparent source width of a panned signal, should be a standard control element of every surround panner because it enables many variations and possibilities for a creative mix. %and because we would work with this parameter considering the specific features of the sound we have to spatialize. 
@@ -182,12 +185,14 @@ In most applications, this factor is restricted and linked to the sound source's
       
 \subsection{Media programming environments}  \label{sec:Media programming environments}
 Beside the paradigm of the DAW, various media programming environments exist that are capable of spatial sound synthesis. These include SuperCollider, Pure Data, Chuck, OpenMusic, and Max/MSP.  In order to support individual approaches and to meet the specific needs of computer music and mixed media art, these environments enable the user to combine music making with computer programming.\\  
-However, in the name of complete flexibility, these environments lack in providing structured solutions for the specific challenges of spatial music as outlined in section \ref{sec:introduction}. Consequently, numerous self-contained spatialization libraries and toolboxes have been created by artists and researchers to generate virtual sound sources and artificial spaces.  These include the Space Unit Generator \cite{SUG02}, IRCAM's Spatialisateur \cite{JotPhD}, and Virtual Microphone Control \cite{CMJ08-VIMIC}. Also toolboxes primarily dedicated to sound diffusion practice, such as the BEASTmulch System\footnote{\url{http://www.beast.bham.ac.uk/research}}, or ICAST \cite{ICAST06} are available.   
-Each tool, however, may only provide solutions for a subset of compositional viewpoints.  The development of new aesthetics through combining these tools is difficult or limited through their specific designs. 
+However, in the name of complete flexibility, these environments lack in providing structured solutions for the specific challenges of spatial music as outlined in section \ref{sec:introduction}. Consequently, numerous self-contained spatialization libraries and toolboxes have been created by artists and researchers to generate virtual sound sources and artificial spaces, such as Space Unit Generator \cite{SUG02}, Spatialisateur \cite{JotPhD}, or Virtual Microphone Control \cite{CMJ08-VIMIC}. Also toolboxes dedicated to sound diffusion practice, such as the BEASTmulch System\footnote{\url{http://www.beast.bham.ac.uk/research}}, or ICAST \cite{ICAST06} are available.   
+Each tool, however, may only provide solutions for a subset of compositional viewpoints. The development of new aesthetics through combining these tools is difficult or limited through their specific designs. 
+\subsection{Stand-alone Applications}
+A variety of powerful stand-alone spatialization systems are in development, ranging from directional based spatialization frameworks (e.g. SSR \cite{geier2008ssr}, \emph{Zirkonium} \cite{ramakrishnan2006zk}) and Auditory Virtual Environments (AVE) (e.g. tinyAVE) to sound diffusion and particle oriented approaches (e.g. \emph{Scatter} \cite{ScatterSMC08}). Although these applications usually promote their graphical user interfaces as the primary method to access the embedded DSP-core, a few strategies to allow communication from outside through self-contained  XML, MIDI or OSC protocols can be found.  
 
 \section{Strategies \& Methodologies in sound spatialization}  
  
-A traditional workflow in electroacoustic composition or linear sound editing comprises a number of steps leading to the construction of an audio scene. Other contexts, such as audio installations or interactive/multimedia work, imply a different sequence in the steps of the process. A layered modular approach tries to abstract these differences and define underlying common elements that are always in play when spatialization is used. This layered model doesn't imply a specific method.  It much rather emphasizes the importance of the interchangeability of modules, which share their interconnecting interfaces and communication protocol.  Thus, the tools for each layer can be exchanged and compared without forcing an artist to completely rebuild their setup.  TODO:  I (Tim) am not sure what word to use at the end of the preceding sentence, but you cannot use 'setup'.  Using 'setup' as a noun is not really correct English; when it is used it is considered extremely informal.
+A traditional workflow in electroacoustic composition or linear sound editing comprises a number of steps leading to the construction of an audio scene. Other contexts, such as audio installations or interactive/multimedia work, imply a different sequence in the steps of the process. A layered modular approach tries to abstract these differences and define underlying common elements that are always in play when spatialization is used. This layered model doesn't imply a specific method.  It much rather emphasizes the importance of the interchangeability of modules, which share their interconnecting interfaces and communication protocol.  Thus, the tools for each layer can be exchanged and compared without forcing an artist to completely rebuild their setup.  TODO:  I (Tim) am not sure what word to use at the end of the preceding sentence, but you cannot use ``setup".  Using ``setup" as a noun is not really correct English; when it is used it is considered extremely informal.
 
 \begin{quote}Spatial orchestration eases this [...] constraint, [...] the composition may be reconfigured for each individual performance. This will require [...] the composer [to] conceive spatial attributes in a more abstract fashion that is then instantiated in potentially different ways into different performance environments. \cite{Lyon:2008spatial_orchestration} \end{quote}
 By working symbolically during the composition/editing process, and separating the authoring from the rendering processes, a realization can become portable. A common set of descriptors and shared representation metaphors, such as timelines or scene graphs, builds the glue to make a disparate set of tools into a coherent workflow by enhancing interoperability between the building blocks.\\
