--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -71,7 +71,7 @@
 \permission
 
 \begin{abstract}  
-We propose a multi-layer approach to mediate across essential components involved in sound spatialization. This approach will facilitate the artistic work with spatialization systems which currently lacks in terms of structure, flexibility, and interoperability. 
+We propose a multi-layer approach to mediate across essential components involved in sound spatialization. This approach will facilitate the artistic work with spatialization systems which currently lacks of structure, flexibility, and interoperability. 
 \\                            	
 \textbf{Keywords:} sound spatialization, interoperability, layered architecture, adaptation, site-specific, Ambisonics , TODO: make better \& stronger keywords   
 %-flexible working environment for spatialization\\
@@ -83,12 +83,12 @@ We propose a multi-layer approach to mediate across essential components involve
 \end{abstract}
 
 \section{Introduction}\label{sec:introduction}         
-The improvements in computer and audio equipment in recent years makes it possible to experiment more freely with resource-demanding sound synthesis techniques such as spatialization. For seeking new means of expression different spatialization applications should be easily combined and accessible for both programmatic and user interfaces. % and/or other controllers. %e.g. a generative mapping of a granular synth output to different spatial renderer from one common user interface, while also streaming spatial encoded audio to the internet. 
+The improvements in computer and audio equipment in recent years makes it possible to experiment more freely with resource-demanding sound synthesis techniques such as spatialization. (NOTE : is spatialization a "sound synthesis technique" ? Not sure... [PB]) For seeking new means of expression different spatialization applications should be easily combined and accessible for both programmatic and user interfaces. % and/or other controllers. %e.g. a generative mapping of a granular synth output to different spatial renderer from one common user interface, while also streaming spatial encoded audio to the internet. 
 Furthermore, 
 %The goal of any spatialization
 %rendering is it only the rendering system, or control/rendering ?
 %system is to facilitate or empower the creative use of the spatial medium for a sonic artist. 
-Quantitative studies on spatial music (\cite{otondo2008ctu}, \cite{PetersSurvey}) remind us that there are great individual and context-related differences in the compositional use of spatialization and that there is not any spatialization system that could satisfy every artists. %that the compositional use of spatialization techniques varies strongly across composers and musical context.    
+quantitative studies on spatial music (\cite{otondo2008ctu}, \cite{PetersSurvey}) remind us that there are great individual and context-related differences in the compositional use of spatialization and that there is not any spatialization system that could satisfy every artists. %that the compositional use of spatialization techniques varies strongly across composers and musical context.    
 For instance, the requirements of a computer aided spatialization system may vary between a fixed-media composition (e.g \cite{BarrettOS02}%TODO: find a Robert Normandeau reference
 ), an art-installation (\cite{lossius:2007sound_space_body}), and a live diffusion performance (\cite{Truax99}). 
 One example is an interactive art installation where the real-time quality of a spatial rendering system is of great importance in combination with the possibility to control spatial processes through a multi-touch screen.  Juxtaposed is a second example: a performance of a fixed-media composition where the paramount features may be multichannel playback and the compensation of non-equidistant loudspeakers (in terms of sound pressure and time delays). Additional scenarios may require binaural rendering for headphone listening, multichannel recording, up and down mixing, or a visual representation of a sound scene.  
@@ -158,13 +158,16 @@ Therefore, guaranteeing efficient workflow for sound spatialization requires str
 \section{Review of current Paradigms} \label{sec:review}
 %This section gives an overview of current paradigms and solutions for sound spatialization, and shows their limitations. 
 \subsection{Live sound diffusion}  
-?? shall we mention live diffusion as a paradigm ?
+?? shall we mention live diffusion as a paradigm
+%[PB]: Sounds, sensible... I  could write a little something about electroacoustic music live diffusion, as well as multi-channel sound design practices... and I can ask Benjamin for a sentence or two about live spatialization, e.g. of acoustic ensembles.
+%Does that sound relevant ? Of course, all of these are kind of "legacy techniques", mainly analog and depending on the mixing console... but there may be some parallels... Any Opinion ?
+
 \subsection{Digital Audio Workstations - DAW} \label{sec:digital audio workstations - DAW} 
-Currently, many composers and sound-artists use DAWs for designing their sound spatialization primarily in the context of fixed media, tape-music, and consumer media production. Users of DAWs often have former experience with live diffusion systems, or with panning in a hardware mixing console. Their migration to DAWs seems reasonable because the linear time representation of sound material and the audio bus architecture in DAWs originates from the use of multitrack tape recorder and mixing consoles. 
+Currently, many composers and sound designers use DAWs for designing their sound spatialization primarily in the context of fixed media, tape-music, and consumer media production. Users of DAWs often have former experience with live diffusion systems, or with panning in a hardware mixing console. Their migration to DAWs seems reasonable because the linear time representation of sound material and the audio bus architecture in DAWs originates from the use of multitrack tape recorder and mixing consoles. 
 A number of (mainly commercial) DAWs are mature and offer a systematic user interface, good project and sound file management, and extendability through plug-ins.  They can fulfill the needs of many users in the described context.\\
 However, through focusing on consumer media products, multichannel capabilities are limited. ITU 5.1, a surround sound format with equidistant loudspeakers around an ideal located listener is the most common multichannel format. % in DAWs and in surround panning plugins. 
 Its artistic use may be limited because 5.1 favors the frontal direction and has reduced capabilities for localizing virtual sources from the sides and back.  More recently, extensions to 7.1 or 10.2 are available\footnote{A comparison of DAWs concerning their multichannel audio capabilities shows \url{http://acousmodules.free.fr/hosts.htm}.}.   
-Also, in art installations or concert hall environments non-commercial loudspeaker setups are common, varying in number and arrangements of loudspeakers.  These configurations are typically unaccounted by existing DAWs and therefore often difficult to use. 
+Also, in art installations or concert hall environments, non-standard loudspeaker setups are common, varying in number and arrangements of loudspeakers.  These configurations are typically unaccounted by existing DAWs and therefore often difficult to use. 
 %From 1993, emergence of the ITU 5.1 has been announced as a major improvement for mixing surround sound. Originally designed to fulfill the needs of the film industry, this loudspeaker configuration appeared to music and entertainment companies as a new way to extend their commercial offer. Since then, all DAWs surround panners have been designed to respect and organize sound processing for this set-up. It was not until the late nineties that new suggestions for surround workstations (from 6.1 to 10.2, enhancing sides precision, and perception outside of the Central Listening Position) were considered.\\
 %This was an useful approach for recording, multimedia or film prospects (cannot do business without standards), but still in a regular, circular, geometric and (FIXME: non-neutral ?we mean it influences the user) design, which cannot be acceptable and sufficient for creation or live applications. As an example, a non-flexible loudspeaker circle set-up is very rarely adapted to the concert hall.\\ 
 \\Another critical function for surround sound mixing is the means by which a sound source's energy is distributed amongst the loudspeakers. A \emph{blur} parameter, which determines the apparent source width of a panned signal, should be a standard control element of every surround panner because it enables many variations and possibilities for a creative mix. %and because we would work with this parameter considering the specific features of the sound we have to spatialize. 
@@ -197,7 +200,7 @@ A traditional workflow in electroacoustic composition or linear sound editing co
 \begin{quote}Spatial orchestration eases this [...] constraint, [...] the composition may be reconfigured for each individual performance. This will require [...] the composer [to] conceive spatial attributes in a more abstract fashion that is then instantiated in potentially different ways into different performance environments. \cite{Lyon:2008spatial_orchestration} \end{quote}
 By working symbolically during the composition/editing process, and separating the authoring from the rendering processes, a realization can become portable. A common set of descriptors and shared representation metaphors, such as timelines or scene graphs, builds the glue to make a disparate set of tools into a coherent workflow by enhancing interoperability between the building blocks.\\
 Thus modularity is an essential tenet.  Modularity allows the separation of elements into different layers according to their function as described in \ref{sec:layers}.  Furthermore, Modularity provides a means by which modules may query additional modules and then adapt themselves to the system's topography.\\
-The Tools used for authoring and rendering must comply to these recommendations and can be separated into two categories: rendering engines and authoring meta-tools.\\
+The Tools used for authoring and rendering must comply to these recommendations and can be separated into two categories: rendering engines and authoring meta-tools.\\ TODO : maybe this last part may be fused with the one above ??? Modularity concern tools, doesn't it ? And reducing the categories to 2 (render/meta) is senseless when we claim for more layers....  
 
 
 \subsection{A layered approach to the spatialization workflow}\label{sec:layers}
@@ -243,7 +246,7 @@ In order to better grasp the structural and methodological entities used in a sp
 %	\end{table*}                          
 	\begin{figure}
 		[ht] \centerline{
-		\includegraphics[width=1.1\columnwidth]{layers.pdf}} \caption{TODO: where is Soundflower and Rewire in that graph?} \label{fig:layers} 
+		\includegraphics[width=1.1\columnwidth]{layers.pdf}} \caption{TODO: where is Soundflower and Rewire in that graph? [PB] : I guess in the green layer ??? } \label{fig:layers} 
 	\end{figure}
 	%\end{center}  
 \subsubsection{Physical Device Layer}
@@ -266,7 +269,8 @@ TODO
 \section{Stratified Tools}
 %- structured according to layers
 In order to concretely experiment these ideas, the authors designed and used the tools described below :
-TODO: maybe the tools should be organized according to the layers 
+TODO: maybe the tools should be organized according to the layers - hmmm... yes, but some of them are participating to different layers, e.g. ICST Ambisonics are in 5 and 3... Though, if we do so, maybe the description of the layers should contain the description of the tools used in our experimentations ????
+ 
 \subsection{ICST Ambisonics}
 The ICST ambisonics tools comprise a set of four externals for Max/MSP. The two DSP externals ambiencode~ and ambidecode~ generate and decode Higher Order Ambisonics. They reach 3rd order with Furse-Malham Formulas in version 1.2, and 5th order using either the Furse-Malham or Normalized 3D formulas in version 2.0. The two control externals ambimonitor and ambicontrol complete the set. Ambimonitor presents the user with a GUI displaying point sources in an abstract 2D or 3D space, various key commands, snapshot and file I/O capabilities and it generates coordinate information for the DSP objects. Ambicontrol provides a number of methods that control motion of points in the Ambimonitor's dataset. Automated motions such as rotation, random motion, optionally constrained in bounding volumes and user defined trajectories can be applied to single or grouped points. The import/export format for the trajectories and state snapshots is a simple XML text file, which will be replaced by a SpatDIF compliant formatting in a next release. \cite{Schacher:2006ambi_max} At ICST a different panning algorithm \cite{Neukom:2008ambipan} was derived from in-phase ambisonic decoding and also coded as Max/MSP external. Ambipanning~ implements the Ambisonic Equivalent Panning, which transcodes in one step a set of mono sources onto a ideally circular speaker setup with an arbitrary number of speakers. The algorithm works with a continuous order factor, which permits to apply per point individually varying directivity responses. This external understands the same command syntax and becomes interchangeable with the other ICST ambisonic DSP objects. 
 \subsection{Jamoma}
