--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -198,7 +198,7 @@ d_{i} = \sqrt{ {(x_{i} - x_{s})}^2 + {(y_{i} - y_{s})}^2 + {r_{s}}^2}
 
 In two dimensions blur can be understood as a vertical displacement between source and speakers. The larger $r$ gets, the less the source will be able to gravitate towards one speaker only. Practical experience indicates that there is a limit to the amount of blur that can be applied, or the precedence effect \cite{Litovsky:1999precedence_effect} will come into play, causing the perceived direction of the source to gravitate towards the speaker(s) closest to the listener.
 
-In the implementation of DBAP discussed in section \ref{sec:implementation} the blur coefficient is normalized, using the covariance of distance from centre of loudspeaker rig to loudspeakers as scaling factor, in order to make the blur coefficient less sensitive to changes in size of loudspeaker layouts.
+In the implementations of DBAP discussed in section \ref{sec:implementation} the blur coefficient is normalized, using the covariance of distance from centre of loudspeaker rig to loudspeakers as scaling factor, in order to make the blur coefficient less sensitive to changes in size of loudspeaker layouts.
 
 
 
@@ -209,28 +209,27 @@ The model presented so far is not able to cater for sources located outside the 
 First, the \emph{convex hull} of the field of loudspeakers is calculated. In two dimensions the convex hull ``is the shape taken by a rubber band stretched around nails bounded into the plane at each point'' \cite{Rourke:1998_geometry}. It is then determined if the source is outside the hull or not. If it is inside or on the boundary no additional steps need to be taken. If the source is located outside, then the projection of the source onto the boundary of the hull is calculated, defined as the point on the boundary with the shortest possible distance to the source. This source position is  substituted for its projection in subsequent calculations. In addition, the distance from source to the convex hull is returned. This value can be used for optional added spatial processing such as gain attenuation, air filtering, Doppler effect, or gradual introduction of reverb with increasing distance from the hull.
 
 
-\subsection{Extending DBAP by Introducing Spatial Weights}
+\subsection{Extending DBAP by Introducing Speaker Weights}
 
 % CHANGED: Tim changed this next sentence.  He doesn't think the new form is great, but its a lot better than it was...
-In its purest sense, DBAP deals with speakers in a transparent manner, without any further consideration for loudspeaker properties apart from position. The extension of DBAP by introduction of a spatial weight $w_{i}$ in equation \ref{eq:inverse_distance} enables a source to be restricted to use a subset of speakers:
+%In its purest sense, DBAP deals with speakers in a transparent manner, without any further consideration for loudspeaker properties apart from position. 
+DBAP can be further extended by introduction of a speaker weight $w_{i}$ in equation \ref{eq:inverse_distance}:
 
 \begin{equation} \label{eq:inverse_distance_weighed}
 v_{i} = \frac{k w_{i}}{2 d_{i} a} 
 \end{equation}
 
-Equation \ref{eq:calculate_k} will now be modified to:
+Equation \ref{eq:calculate_k} is then modified to:
 
 \begin{equation} \label{eq:calculate_k_weighted}
 k = \frac{2a}{\sqrt{\sum_{i=1}^{N} \frac{{w_{i}}^2}{{d_{i}}^2}}}
 \end{equation}
 
-This opens up for several artistic possibilities: In installations or museum spaces spatial weights can be used to confine sources to restricted areas. One source might be present in one room only while another source is permitted to move between several or all rooms. Used with an Acousmonium\footnote{the Acousmonium is a large orchestra of speakers organized into instrumental groups according to sonic qualities and characteristics} \cite{Bayle:1993MusiqueAcousmatique} spatial weights can restrict diffusion of sources to specific groups of speakers. This permits a spatial orchestration to be prepared or composed prior to performance, and then adjusted to the specific room used for performance. 
-
-Spatial weights can be changed dynamically, allowing smooth transitions from one subset of speakers to another.
+This enables a source to be restricted to use a subset of speakers, opening up for several artistic possibilities. In installations or museum spaces speaker weights can be used to confine sources to restricted areas. One source might be present in one room only while another source is permitted to move between several or all rooms. Used with an Acousmonium\footnote{the Acousmonium is a large orchestra of speakers organized into instrumental groups according to sonic qualities and characteristics} \cite{Bayle:1993MusiqueAcousmatique} speaker weights can restrict diffusion of sources to specific groups of speakers. This permits a spatial orchestration to be prepared or composed prior to performance, and then adjusted to the specific room used for performance.  Speaker weights can be changed dynamically, allowing smooth transitions from one subset of speakers to another.
 
 Finally, weights can be used to differentiate the spatial spread for each loudspeaker, as shown in figure \ref{fig:5spk_weights}, enabling individual topologies for each source.
 
-%This weight parameter, after being submitted to listening tests and visualization (as described later in \ref{sec:visual_representation}), has revealed itself as being more of a spatial weight for each loudspeaker, or rather a spatial ``sharpness'' of the localization of each loudspeaker. This parameter, though, needs further research and listening tests, in laboratory and artistic contexts for a better understanding of its perceptual effect.
+%This weight parameter, after being submitted to listening tests and visualization (as described later in \ref{sec:visual_representation}), has revealed itself as being more of a speaker weight for each loudspeaker, or rather a spatial ``sharpness'' of the localization of each loudspeaker. This parameter, though, needs further research and listening tests, in laboratory and artistic contexts for a better understanding of its perceptual effect.
 
 %The authors are also exploring a means by which to obtain a better numerical representation of this parameter.  In particular the parameter's range and transfer function. Research is ongoing to find a more intuitive process for the user by which to manage the interdependence of all weights.
 
@@ -260,7 +259,7 @@ DBAP is implemented as an external for the real-time multimedia graphical enviro
 %\label{speaker_positions}
 %\end{figure}
 
-A visual representation of the behavior of the algorithm has been developed, using gradients to illustrate the ``predominance'' zone of each speaker. This is also intended to offer intuitive interactive manipulation of source positions and parameters such as spatial blur, rolloff and spatial weights.
+A visual representation of the behavior of the algorithm has been developed, using gradients to illustrate the ``predominance'' zone of each speaker. This is also intended to offer intuitive interactive manipulation of source positions and parameters such as spatial blur, rolloff and speaker weights.
 
 \begin{figure}[ht]
 \centerline{\includegraphics[scale=0.5]{spk4_r_6_b_0+nbrs}}
@@ -308,8 +307,8 @@ These pictures are generated in realtime by the algorithm, and may serve as a us
 
 DBAP offers a light-weight panning-based solution for spatialization using irregular loudspeaker layouts. The Jamoma module implementation makes DBAP available with an interface similar to other Jamoma modules for rendering spatial sound, enabling various techniques to be interchanged and compared. %Jamoma also offers a more advanced spatialization technique that can be used for irregular loudspeaker layouts, ViMiC, incorporating distance-based signal delays between speakers, simulation of microphone patterns, early reflections and surface absorption \cite{Peters:2008vimic}. ViMiC is more CPU-intensive, and might require a dedicated computer for spatialization or limitations on the number of loudspeakers used as compared to DBAP.
 
-Implementation of convex hulls and spatial weights remains to be combined (in the case of speakers subsets), and extended for three-dimensional loudspeaker layouts. 
-%If spatial weights are used to define subspaces of speakers, it also remains to be investigated if and how the implementation of convex hulls can be dynamically reconfigured.
+Implementation of convex hulls and speaker weights remains to be combined (in the case of speakers subsets), and extended for three-dimensional loudspeaker layouts. 
+%If speaker weights are used to define subspaces of speakers, it also remains to be investigated if and how the implementation of convex hulls can be dynamically reconfigured.
 
 %In this paper DBAP has been discussed for spatialization to a static layout of speakers. For gaming applications the speaker layout relative to the player could be defined, and then the actual speaker layout could be changed dynamically as the gamer moves through the virtual world of the game.
 
